<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HDC</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="logout">注销</string>
    <string name="auto_login">自动登录</string>
    <string name="save_password">记住密码</string>

    <!-- 提示信息 -->
    <string name="alert_input_phonenum">请输入手机号码</string>
    <string name="alert_phonenum_illegal">您输入的手机号码有误，请重新输入...</string>
    <string name="alert_input_password">请输入密码</string>
    <string name="alert_login_failed">登录失败，请检查您的网络，确保网络通畅...</string>
    <string name="alert_login_service_failed">登录失败,服务器连接错误...</string>
    <string name="alert_login_pass_error">登录失败，密码错误，请重新输入...</string>
    <string name="alert_login_pass_changed">密码已被修改，请使用新密码重新登录</string>
    <string name="alert_login_phonenum_error">登录失败，账号信息不存在，请重新输入...</string>
    <string name="alert_login_network_timeout">登录失败，网络连接超时...</string>
    <string name="alert_login_network_error">登录失败，网络连接异常...</string>
    <string name="alert_login_success">登录成功</string>
    <string name="alert_have_send_pass">登录密码即将发送到您的手机，请查收</string>
    <string name="alert_login_account_locked">尊敬的客户，\n由于您已经连续3次输入错误的服务密码，\n您账号的使用将受限，\n请于24小时后再次登录。\n不便之处，敬请谅解！</string>
    <string name="alert_logout_success">注销成功</string>
    <string name="alert_login_sso_failed">登录失败</string>
    <string name="alert_login_sso_sig_error">登录失败，APP签名验证不通过</string>
    <string name="alert_login_sso_para_error">登录失败，接口入参错误</string>
    <string name="alert_login_sso_try_later">正在进行GetToken动作，请稍后</string>
    <string name="alert_login_sso_type_notsupport">登录失败，当前环境不支持指定的登陆方式</string>
    <string name="alert_login_sso_user_not_exsit">选择用户登陆时，本地不存在指定的用户</string>
    <string name="alert_login_sso_other_failed">登录失败，其他错误</string>
    <string name="alert_login_sso_user_cancelled">登录失败，用户取消</string>
    <string name="alert_login_bindservice_error">绑定loginService失败</string>

    <!-- 登录界面文字 -->
    <string name="login_select_history">选取历史账号登录</string>
    <string name="login_by_business_pass">机顶盒密码登录</string>
    <string name="login_by_service_pass">手机密码登录</string>
    <string name="login_by_sms_pass">短信密码登录</string>
    <string name="login_business_pass_hint">开通互联网电视时设置的密码</string>
    <string name="login_account_hint">手机号码</string>
    <string name="login_sso_pass_hint">和通行证密码</string>
    <string name="login_sso_sms_hint">和通行证动态短信密码</string>
    <string name="login_by_qrcode">扫描二维码下载手机客户端\n打开客户端扫描二维码可自动登录</string>
    <string name="login_get_qrcode">获取二维码</string>

    <item name="tag_btngetpass_is_click" type="id"></item>
    <item name="tag_btngetpass_time_limit" type="id"></item>

</resources>