<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center" 
    
    >

    <LinearLayout
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"       
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="horizontal" 
        android:layout_marginRight="20dp"
        >

        <LinearLayout
            android:id="@+id/ll_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
          
            android:background="@drawable/bg_login_frame"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="5dp" 
            >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/btn_by_business"
                        style="@style/LoginNavigationBtnTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="110dp"
                        android:layout_weight="1.0"
                        android:text="@string/login_by_business_pass" />

                    <Button
                        android:id="@+id/btn_by_service"
                        style="@style/LoginNavigationBtnTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="110dp"
                        android:layout_weight="1.0"
                        android:text="@string/login_by_service_pass" />
                    
                    <Button
                        android:id="@+id/btn_by_sms"
                        style="@style/LoginNavigationBtnTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="110dp"
                        android:layout_weight="1.0"
                        android:text="@string/login_by_sms_pass" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/login_normal_margin_top"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:paddingTop="@dimen/login_normal_margin_top" >

                    <EditText
                        android:id="@+id/phone_login"
                        style="@style/LoginEditTextTheme"
                        android:hint="@string/login_account_hint"
                        android:inputType="phone"
                        android:maxLength="11" />

                    <EditText
                        android:id="@+id/password_login"
                        style="@style/LoginEditTextTheme"
                        android:layout_marginTop="@dimen/login_normal_margin_top"
                        
                        />
                    
					<!-- android:inputType="numberPassword" --> 

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/login_normal_margin_top" >

<!-- 需求规定取消保存密码按钮 
                        <CheckBox
                            android:id="@+id/check_save_pass"
                            style="@style/CustomCheckbox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/save_password" />

                        <CheckBox
                            android:id="@+id/check_auto_login"
                            style="@style/CustomCheckbox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/auto_login" />
-->
                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">
	                    <Button
	                        android:id="@+id/login_bt"
	                        style="@style/LoginBtnTheme"
	                        android:layout_weight="1"
	                        android:layout_marginTop="@dimen/login_normal_margin_top"
	                        android:text="@string/login" >
	                    </Button>
	                    
	                    <Button 
	                        android:id="@+id/logout_bt"
	                        style="@style/LoginBtnTheme"
	                        android:layout_weight="1"
	                        android:layout_marginTop="@dimen/login_normal_margin_top"
	                        android:text="@string/logout"
	                        />
                    </LinearLayout>


                    <Button
                        android:id="@+id/to_register"
                        style="@style/LoginBtnTheme"
                        android:layout_marginTop="@dimen/login_normal_margin_top"
                        android:text="@string/login_select_history"
                        android:visibility="gone" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/login"
        android:layout_below="@id/login"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/tv_get_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_getpass_bg"
            android:focusable="true"
            android:gravity="center"
            android:minWidth="200dp"
            android:text="获取动态密码"
            android:textColor="@drawable/btn_login_text_style"
            android:textSize="@dimen/normalTextSize"
            android:visibility="invisible" />
    </LinearLayout>

</RelativeLayout>